Edit timelog added
