# server/src/services/timelog.service.ts
@@ -44,7 +44,7 @@ export const endTimelog = async (timelogId: string): Promise<ITimeLogPayload | F
     try {
         const timelogRepository = getRepository(TimeLog)
         const timelog = await timelogRepository.findOne({where: {id: timelogId, end: null}})
-        if(!timelog) return {message: "Timelog was not found"}
+        if(!timelog) return {message: "Timelog was not found or end time is set"}
         return await timelogRepository.save({
             ...timelog,
             end: new Date().toLocaleString()
@@ -57,7 +57,6 @@ export const endTimelog = async (timelogId: string): Promise<ITimeLogPayload | F
 export const deleteTimelog = async (timelog_id: string): Promise<Feedback> => {
     try {
         const timelogRepo = getRepository(TimeLog)
-
         const time = await getRepository(TimeLog).findOne({
             where:
                 {
@@ -73,6 +72,20 @@ export const deleteTimelog = async (timelog_id: string): Promise<Feedback> => {
     } catch
         (e) {
         return {message: "Failed to delete timelog"}
+    }
+}
+
+export const editTimelog = async (timelog_id: string, payload: ITimeLogPayload): Promise<ITimeLogPayload | Feedback> => {
+    try {
+        const timelogRepo = getRepository(TimeLog)
+        const found = await timelogRepo.findOne({where: {id: timelog_id, end: null}})
+        if(!found) return {message: "Timelog was not found or is not ended"}
+        return await timelogRepo.save({
+            ...found,
+            ...payload
+        })
+    }catch (e) {
+        return {message: "Failed to edit timelog"}
     }
 }
 
