# server/src/swagger.json
@@ -458,6 +458,60 @@
 					}
 				]
 			}
+		},
+		"/api/timelog/edit/{timelogId}": {
+			"patch": {
+				"operationId": "EditTimelog",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ITimeLogPayload"
+										},
+										{
+											"$ref": "#/components/schemas/Feedback"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Timelog"
+				],
+				"security": [
+					{
+						"jwt": [
+							"user"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "timelogId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ITimeLogPayload"
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"servers": [
